# matrix-ioc

./: .gitignore  CMakeLists.txt
include/matrix-ioc/: stdafx.h
include/matrix-ioc/common/: BaseException.h  Guard.h  (+6 more)
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
src/matrix-ioc/: CMakeLists.txt  pch.h  stdafx.h
src/matrix-ioc/common/: ArgumentNullException.cpp  ArgumentNullException.h  BaseException.cpp  BaseException.h  FileLoadException.cpp  FileNotExistsException.cpp  FileNotExistsException.h  Guard.cpp  MapValueDescriptor.h  ObjectMap.h  Stopwatch.cpp  Stopwatch.h  StringExtensions.cpp  TextFormatter.cpp
src/matrix-ioc/configuration/: ConfigurationBuilder.cpp  ConfigurationBuilder.h  ConfigurationProvider.cpp  ConfigurationProvider.h  ConfigurationRoot.cpp  ConfigurationRoot.h  FileConfigurationProvider.h  IConfigurationRoot.h  MemoryConfigurationProvider.cpp  MemoryConfigurationProvider.h
src/matrix-ioc/include/: targetver.h
src/matrix-ioc/include/common/: ArgumentNullException.h  ObjectMap.h  StringExtensions.h  TextFormatter.h
src/matrix-ioc/include/configuration/: ConfigurationBuilder.h  ConfigurationProvider.h  IConfiguration.h  IConfigurationBuilder.h  IConfigurationProvider.h
src/matrix-ioc/include/ioc/: ApplicationBuilder.h  DataContext.h  IApplicationBuilder.h  IServiceProvider.h  ServiceContainer.h  ServiceLifetime.h  TypeInfo.h  TypeMap.h
src/matrix-ioc/include/logging/: ConsoleLogger.h  ILogger.h  ILoggerFactory.h  LoggerBase.h  VsOutput.h
src/matrix-ioc/include/pipeline/: IPipelineBlock.h  PipelineContext.h
src/matrix-ioc/include/task/: CancellationToken.h  Task.h  TaskWithResult.h
src/matrix-ioc/ioc/: ApplicationBase.cpp  ApplicationBase.h  ApplicationBuilder.cpp  ApplicationStartBlock.cpp  ApplicationStartBlock.h  ApplicationStartBlockContext.h  IApplication.h  IApplicationBuilder.h  IApplicationStartBlock.h  IComponent.h  InstanceCreatorContext.cpp  InstanceCreatorContext.h  InstanceDescriptor.cpp  ServiceContainer.cpp  ServiceDescriptor.cpp  ServiceDescriptor.h  TypeInfo.cpp  TypeMap.cpp
src/matrix-ioc/logging/: ConsoleLogger.cpp  ConsoleLogger.h  ConsoleLoggerProvider.cpp  ConsoleLoggerProvider.h  ILogger.h  ILoggerProvider.h  InternalLogger.cpp  InternalLogger.h  LogLevelConverter.cpp  LogLevelConverter.h  LogMessageName.h  LoggerBase.cpp  LoggerFactory.cpp  LoggerFactory.h  VsOutput.cpp  VsOutput.h  VsOutputLogger.cpp  VsOutputLoggerProvider.cpp  VsOutputLoggerProvider.h
src/matrix-ioc/pipeline/: IPipeline.h  IPipelineBlock.h  IPipelineBuilder.h  Pipeline.cpp  Pipeline.h  PipelineBlock.cpp  PipelineBlock.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineContext.cpp  PipelineContext.h
src/matrix-ioc/src/common/: ArgumentNullException.cpp  BaseException.cpp  DataContext.cpp  FileLoadException.cpp  FileNotExistsException.cpp  Guard.cpp  Stopwatch.cpp  StringExtensions.cpp  TextFormatter.cpp
src/matrix-ioc/src/configuration/: ConfigurationBuilder.cpp  ConfigurationProvider.cpp  ConfigurationRoot.cpp  MemoryConfigurationProvider.cpp
src/matrix-ioc/src/ioc/: ApplicationBase.cpp  ApplicationBuilder.cpp  ApplicationStartBlock.cpp  InstanceCreatorContext.cpp  InstanceDescriptor.cpp  ServiceContainer.cpp  ServiceDescriptor.cpp  TypeInfo.cpp  TypeMap.cpp
src/matrix-ioc/src/logging/: ConsoleLogger.cpp  ConsoleLoggerProvider.cpp  InternalLogger.cpp  LogLevelConverter.cpp  LoggerBase.cpp  LoggerFactory.cpp  VsOutput.cpp  VsOutputLogger.cpp  VsOutputLoggerProvider.cpp
src/matrix-ioc/src/pipeline/: Pipeline.cpp  PipelineBlock.cpp  PipelineBuilder.cpp  PipelineContext.cpp
src/matrix-ioc/src/task/: CancellationToken.cpp  DoWithResult.cpp  Task.cpp  TaskWithResult.cpp
src/matrix-ioc/task/: CancellationToken.cpp  CancellationToken.h  Do.h  DoWithResult.cpp  DoWithResult.h  Task.cpp  TaskWithResult.cpp  TaskWithResult.h
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/matrix-ioc-tests/: CMakeLists.txt  main.cpp  pch.h  test-demo.cpp
tests/matrix-ioc-tests/include/: ApiHandleComponent.h  ApiHandler.h  Circle.h  IApiHandler.h  InitializeComponent.h  LoggerCreator.h  MockApplication.h  MockServiceContainer.h  MockServiceProvider.h  Rectangle.h  Shape.h  TestServices.h
tests/matrix-ioc-tests/mocks/: ApiHandleComponent.cpp  ApiHandleComponent.h  ApiHandler.cpp  ApiHandler.h  Circle.cpp  Circle.h  IApiHandler.cpp  IApiHandler.h  InitializeComponent.cpp  InitializeComponent.h  LoggerCreator.cpp  LoggerCreator.h  MockApplication.cpp  MockApplication.h  MockPathResolver.cpp  MockPathResolver.h  MockServiceContainer.cpp  MockServiceContainer.h  MockServiceprovider.cpp  MockServiceprovider.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  TestFiles.cpp  TestFiles.h  TestServices.cpp  TestServices.h
tests/matrix-ioc-tests/src/: ApiHandleComponent.cpp  ApiHandler.cpp  Circle.cpp  IApiHandler.cpp  InitializeComponent.cpp  LoggerCreator.cpp  MockApplication.cpp  MockServiceContainer.cpp  MockServiceprovider.cpp  Rectangle.cpp  Shape.cpp  TestServices.cpp
tests/matrix-ioc-tests/tests/: ConsoleLoggerTests.cpp
tests/matrix-ioc-tests/tests/common/: ArgumentNullExceptionTests.cpp  DataContextTests.cpp  GuardTests.cpp  ObjectMapTests.cpp  StopwatchTests.cpp  StringExtensionsTests.cpp  TextFormatterTests.cpp  TypeInfoTests.cpp  TypeMapTests.cpp
tests/matrix-ioc-tests/tests/configuration/: ConfigurationBuilderTests.cpp  ConfigurationRootTests.cpp  MemoryConfigurationProviderTests.cpp
tests/matrix-ioc-tests/tests/ioc/: ApplicationBuilderTests.cpp  ApplicationTests.cpp  InstanceCreatorContextTests.cpp  ServiceContainerTests.cpp  ServiceDescriptorTests.cpp  ServiceLifetimeTests.cpp
tests/matrix-ioc-tests/tests/logging/: ConsoleLoggerProviderTests.cpp  ConsoleLoggerTests.cpp  InternalLoggerTests.cpp  LogLevelConverterTests.cpp  LoggerFactoryTests.cpp  VsOutputLoggerProviderTests.cpp
tests/matrix-ioc-tests/tests/pipeline/: PipelineBlockTests.cpp  PipelineBuilderTests.cpp  PipelineContextTests.cpp  PipelineTests.cpp
tests/matrix-ioc-tests/tests/task/: DoTests.cpp  DoWithResultTests.cpp  TaskTests.cpp  TaskWithResultTests.cpp
(+28 files in other folders)
